<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_finishing"
        android:enabled="true"
        android:icon="@drawable/ic_ending_task_white_24dp"
        android:title="@string/ending_tasks"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_todo"
        android:enabled="true"
        android:icon="@drawable/ic_format_list_numbered_white_24dp"
        android:title="@string/to_do_tasks"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_done"
        android:enabled="true"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/done_tasks"
        app:showAsAction="ifRoom"/>
</menu>