<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/form_image_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/ic_title_white_24dp"
            android:tint="@color/form_icon_color"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:nextFocusForward="@+id/description_edit_text"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/form_image_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/ic_description_white_24dp"
            android:tint="@color/form_icon_color"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_description"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/form_image_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/ic_access_time_white_24dp"
            android:tint="@color/form_icon_color"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/due_date_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/due_date_edit_text"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/task_due_date"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/checklist"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

</LinearLayout>